# django_youtube_helper

./: .env.example  .gitignore  README.md  pyproject.toml
YouTubeHelper/main/: admin.py  models.py  urls.py  utils.py  views.py  youtubeapi.py
YouTubeHelper/main/migrations/: 0001_initial.py  0002_auto_20200611_1424.py  0003_auto_20200611_1452.py  0004_auto_20200614_1911.py  0005_auto_20200630_1436.py
YouTubeHelper/main/static/main/: script.js  script.min.js  style.css  style.min.css
YouTubeHelper/main/templates/main/: 404.html  index.html  liked.html  results.html  watch.html
YouTubeHelper/main/templates/main/layouts/: base.html  basic.html
YouTubeHelper/project/: settings.py  urls.py
YouTubeHelper/users/: forms.py  urls.py  views.py
YouTubeHelper/users/migrations/: 0001_initial.py
YouTubeHelper/users/templates/users/: login.html  register.html
