[tool.poetry]
name = "youtube_helper"
version = "0.1.0"
description = "A YouTube Helper application to list video you like"
authors = ["HolyDorus <marichevdenysmail@gmail.com> <https://github.com/HolyDorus>"]

[tool.poetry.dependencies]
python = "^3.8"
django = "^3.0.7"
python-dotenv = "^0.13.0"
psycopg2 = "^2.8.5"
isodate = "^0.6.0"
requests = "^2.24.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
